--- a/pokemon/css/main.css
+++ b/pokemon/css/main.css
@@ -31,12 +31,26 @@ body {
     height: 225px;
 }
 
+.form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 100px;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+}
+
+
 .pokemon__first-select {
     margin-top: 70px;
     width: 260px;
     height: 60px;
-    border: 2px solid #000;
+    border: 3px solid #000;
     border-radius: 15px;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
 }
 
 .pokemon__first-select::placeholder {
@@ -44,5 +58,56 @@ body {
 }
 
 .pokemon__first-select + .pokemon__first-select {
-    margin-left: 35px;
+    margin-left: 40px;
+}
+
+.pokemon__list {
+    margin: -30px;
+    padding: 0;
+    list-style: none;
+}
+
+.pokemon__item {
+    margin: 15px;
+    width: 307px;
+    height: 423px;
+    background-color: #fff;
+    border: 3px solid #000;
+    border-radius: 15px;
+}
+
+.pokumon__img-section {
+    height: 255px;
+}
+
+.pokemon__list-line {
+    margin-bottom: 20px;
+    margin-left: -32px;
+}
+
+.pokemon__list-section {
+    padding: 0px 30px 37px;
+}
+
+.card-title {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
+    margin-bottom: 5px;
+    margin-right: 102px;
+}
+
+.pokumon__list-desc {
+    margin-bottom: 25px;
+    text-align: left;
+}
+
+.pokumon__age {
+    margin-left: 30px;
+}
+
+.pokumon__weight {
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 28px;
 }
